# itmo_chatbot

./: README.md  config.py  descripitions.py  get_study_plan.py  main.py  pyproject.toml
